# elementscript-micro

./: .gitignore  .project-settings.yml  README.md  elementscript-micro.cabal  stack.yaml
src/: Main.hs
src/Language/Elementscript/: Micro.hs
src/Language/Elementscript/Micro/: Values.hs
