name:                elementscript-micro
version:             0.0.0.0
stability:           alpha
synopsis:            A minimal Elementscript variant with which to experiment with infix homoiconicity.
-- description:         
homepage:            https://github.com/pthariensflame/elementscript-micro
license:             BSD3
license-file:        LICENSE
author:              Alexander Altman
maintainer:          alexanderaltman@me.com
copyright:           Copyright (c) 2013, Alexander Altman
category:            Language
build-type:          Simple
cabal-version:       >= 1.8

library
  hs-source-dirs:      src
  exposed-modules:     Language.Elementsong.Micro,
                       Language.Elementsong.Micro.Values
  build-depends:       base, text, pipes, containers
  ghc-options:         -Wall

executable escpt-mu
  hs-source-dirs:      src
  main-is:             Main.hs
  build-depends:       base, text, pipes, elementscript-micro
  ghc-options:         -Wall
